# engine

./: .gitignore  .release.toml  CHANGELOG.md  CLAUDE.md  CONFIG_DESIGN.md  Cargo.toml  DEPLOYMENT_CHECKLIST.md  Dockerfile  IMPLEMENTATION.md  LICENSE  Makefile.toml  README.md  README.zh.md  REFACTOR_PLAN.md  RELEASE_PLAN.md  cliff.toml  clippy.toml  install.ps1  install.sh  publish.py  release.toml  rustfmt.toml
.claude/: CLAUDE.md  coding.md  communication.md  documentation.md  execution-policy.md  principles.md  workflow.md
.claude/agents/: chat-assistant.md  claude-md-merger.md  code-analyzer.md  deep-thinker.md  feature-designer.md  framework-architect.md  issue-executor.md
.claude/commands/: ik-design.md  ik-doc-migrate.md  ik-plan.md  ik-setup.md
.claude/context/: architecture.md  conversation-logging.md  current-status.md  project.md  requirements.md  tech-stack.md
.claude/lang/: fukict.md  go.md  python.md  rust.md  tailwindcss.md  typescript.md
.claude/rules/: absolute.md  acceptance.md  code-style.md  communication-core.md  docs-governance.md  execution-policy.md  git-rules.md  principles-core.md  root.md  safety-and-output.md
.claude/temp/: init-result.json
.cursor/rules/: rust-coding-standards.mdc  rust-dev-guide.mdc
.windsurf/rules/: chat-guide.md  rust-coding-standards.md  rust-dev-guide.md
docs/: CLI_DESIGN.md  CONFIG_DESIGN.md  DEVELOPMENT_TODOLIST.md  EXECUTOR_ARCHITECTURE.md  IMPLEMENTATION.md  builder.md  builder.zh.md  cli-reference.md  cli-reference.zh.md  compose.zh.md  conditions.md  conditions.zh.md  configuration.md  configuration.zh.md  getting-started.md  getting-started.zh.md  logs.md  logs.zh.md  project-structure.md  project-structure.zh.md  release.md  variables.md  variables.zh.md  volumes.md  volumes.zh.md
example/: .confkit.yml  SELF_RELEASE_OVERVIEW.md  confkit-compose.yml
examples/: ENVIRONMENT_VARIABLES.md  RELEASE_README.md  builder.yml  docker-compose.yml  release.sh
src/: lib.rs  main.rs
src/cli/: builder.rs  clean.rs  config.rs  image.rs  interactive.rs  log.rs  logs.rs  mod.rs  run.rs  task.rs
src/core/: mod.rs
src/engine/: docker.rs  engine.rs  mod.rs  podman.rs
src/formatter/: log.rs  mod.rs  (+3 more)
tests/: README_test_utils.md  condition_expression_tests.rs  condition_integration_tests.rs  condition_unit_tests.rs  event_hub_graceful_shutdown_test.rs  integration_test.rs  test_macros_example.rs  test_utils.rs
(+256 files in other folders)
