[package]
name = "confkit-engine"
version = "0.2.0"
edition = "2021"
authors = ["confkit team"]
description = "confkit CLI - 配置驱动的构建和部署工具"
license = "MIT"
repository = "https://github.com/confkit/engine"
keywords = ["cli", "build", "deploy", "docker", "ci-cd"]
exclude = [
  "example/**",
  "docs/**/*",
  "tests/**/*",
  ".cursor/**/*",
  ".vscode/**/*",
  ".git/**/*",
  ".gitignore"
]

[[bin]]
name = "confkit"
path = "src/main.rs"

[dependencies]
# 核心依赖
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
async-trait = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 工具库
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.4"
futures = "0.3"
tokio-util = "0.7"
reqwest = { version = "0.12", features = ["json", "multipart"] }
regex = "1.10"
once_cell = "1.19"
serde_json = "1.0"
toml = "0.9"

# 交互式界面
inquire = "0.7"

# 格式化
tabled = "0.20"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort" 

[dependencies.tracing]
version = "0.1"
default-features = false
features = ["std"]
